crates/ars-components/src/date_time/date_range_field/snapshots/ars_components__date_time__date_range_field__tests__snapshot_separator.snap
---
source: crates/ars-components/src/date_time/date_range_field/tests.rs
expression: snapshot_attrs(&api.separator_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "separator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-range-field",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
